# Predictive-Fatigue-Aware-Human-Robot-Collaboration

./: CMakeLists.txt  LICENSE  README.md  commands.txt  grasp.csv  package.xml  requirements.txt  ur3_robotiq_real.urdf.xacro
cmake/: gazebo_plugin_path.sh.in
config/: gazebo_controllers.yaml  gazebo_view.rviz  hand_sandbox_view.rviz  initial_positions.yaml
data/: gesture_brain.joblib  latency_log.csv  neutral.csv  okay.csv  point.csv  stop.csv  table_calibration.yaml
launch/: gazebo_sim.launch.py  hand_mirror_sandbox.launch.py  real_vision_hardware.launch.py
meshes/linkerhand/: ATTRIBUTION.txt
src/: confusion_matrix.py  gaze_log.csv  virtual_hand_joint_driver.cpp
src/intention_gazebo/: CMakeLists.txt  package.xml
src/intention_gazebo/config/: gazebo_controllers.yaml  initial_positions.yaml
src/intention_gazebo/launch/: gazebo_sim.launch.py  real_ur3.launch.py
src/intention_gazebo/urdf/: ur3_robotiq_gazebo.urdf.xacro  virtual_hand.urdf.xacro
src/intention_gazebo/worlds/: workstation.sdf
src/report/data/: slew_log.csv
src/report/plots/: fatigue_scaling_histogram.py  fatigue_weight_sensitivity.py  feature3_estop_plot.py  gaze_commitment_timing.py  gesture_latency_histogram.py  sensitivity_results.csv  tepr_timeline.py
src/vision_input/: package.xml  setup.cfg  setup.py
src/vision_input/launch/: ar_demo.launch.py  complete_system.launch.py  ur3_rviz.launch.py
src/vision_input/rviz/: ar_pointing.rviz  real_robot.rviz  view_robot.rviz
src/vision_input/urdf/: ur3_with_gripper.urdf.xacro
src/vision_input/vision_input/: ar_pointing_interface.py  ar_robot_controller.py  camera_node.py  compare_classifiers.py  data_recorder.py  fatigue_monitor.py  fatigue_override_node.py  gamepad_operator_node.py  gamepad_sandbox.py  hand_mirror_node.py  robot_controller.py  table_calibrator.py  tobii_node.py  train_model.py  virtual_operator_node.py
worlds/: workstation.sdf
