<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>vision_input</name>
  <version>0.0.0</version>
  <description>Perception, fatigue monitoring and robot control nodes for a predictive, fatigue-aware human-robot collaboration system on the Universal Robots UR3 with ROS 2 Humble.</description>
  <maintainer email="ranidugoonetilleke@gmail.com">Ranidu P. Goonetilleke</maintainer>
  <license>MIT</license>

  <depend>rclpy</depend>
  <depend>sensor_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>trajectory_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>tf2_ros</depend>
  <depend>gazebo_msgs</depend>
  <depend>linkattacher_msgs</depend>

  <test_depend>ament_copyright</test_depend>
  <test_depend>ament_flake8</test_depend>
  <test_depend>ament_pep257</test_depend>
  <test_depend>python3-pytest</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
